# Shaderpunk

./: Cargo.toml  LICENSE  README.md  RESEARCH.md
.github/workflows/: rust.yml
autodoc/: Cargo.toml
autodoc/src/: link.rs  main.rs  material.rs  vertexfactory.rs
autodoc/templates/material/: _technique.md  _template.md
autodoc/templates/renderstage/: cascade_regular.toml  composition_element.toml  count_lights.toml  debugdraw.toml  debugdraw_wireframe.toml  depth.toml  depth_prepass.toml  depthprepass_mirror_opaque_notxaa.toml  distortion.toml  gbuffer_regular.toml  gbuffer_velbuff_regular.toml  hair_alpha_accum.toml  hair_basecolor_blend.toml  hair_gbuffer_solid.toml  hair_gbuffer_velbuff_solid.toml  highlights.toml  hologram_depth.toml  late_gbuffer_regular.toml  lighting.toml  mark_transparent_particles_rt.toml  maskstencil_opaque_notxaa.toml  opaque_notxaa.toml  overdraw.toml  particle_overdraw.toml  planar_reflection.toml  post_feedback_color.toml  post_gbuffer.toml  screen_space_water_depth.toml  screenspace_vfx.toml  skin_translucency.toml  subsurface_emissive.toml  terrain_heightmap.toml  top_down_car_proxy.toml  top_down_car_proxy_back_face.toml  top_down_car_proxy_debug.toml  transparent.toml  transparent_back_face.toml  transparent_background.toml  transparent_depth_write.toml  transparent_mark_rt.toml  (+7 more)
autodoc/templates/structs/: CameraShaderConsts.md  FrequentVertexConsts.md
autodoc/templates/vertexfactory/: 01_Terrain.toml  02_MeshStatic.toml  03_MeshSkinned.toml  04_MeshExtSkinned.toml  05_GarmentMeshSkinned.toml  06_GarmentMeshExtSkinned.toml  07_MeshSpeedTree.toml  08_ParticleBilboard.toml  09_ParticleParallel.toml  10_ParticleMotionBlur.toml  11_ParticleSphereAligned.toml  12_ParticleVerticalFixed.toml  13_ParticleTrail.toml  14_ParticleFacingTrail.toml  15_ParticleScreen.toml  16_ParticleBeam.toml  17_ParticleFacingBeam.toml  18_Decal.toml  19_Debug.toml  20_DrawBuffer.toml  21_Fullscreen.toml  22_MeshSkinnedVehicle.toml  23_MeshStaticVehicle.toml  24_MeshProcedural.toml  25_MeshDestructible.toml  26_MeshDestructibleSkinned.toml  27_MeshSkinnedLightBlockers.toml  28_MeshExtSkinnedLightBlockers.toml  29_GarmentMeshSkinnedLightBlockers.toml  30_GarmentMeshExtSkinnedLightBlockers.toml  31_MeshSkinnedSingleBone.toml  32_MeshProxy.toml  33_MeshWindowProxy.toml  _template.md
core/: Cargo.toml
core/src/: cachefile.rs  encode.rs  hashmap.rs  lib.rs  manager.rs  material.rs  shader.rs
core/src/bundle/: decode.rs  dyn_cache.rs  mod.rs
core/src/rtti_types/: cname.rs  enums.rs  mod.rs  structs.rs  timestamp.rs  vlqint32.rs
explorer/: Cargo.toml
explorer/src/: app.rs  main.rs  optimize.rs
src/: cache.rs  cachefile.rs  encode.rs  hashmap.rs  main.rs  material.rs  timestamp.rs
src/types/: cname.rs  mod.rs  rtti_enums.rs  rtti_structs.rs  samplerstate.rs  vlqint32.rs
