[package]
name = "Shaderpunk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
byteorder = "1"
castaway = "0.2"
enum-try-from = "0.0.1"
fnv_rs = { git = "https://github.com/flibdev/fnv-rs.git" }
hashbrown = "0.15"
modular-bitfield = "0.11"
once_cell = "1.21"
paste = "1.0"
regex = "1.11"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
vmap = "0.6"
