[workspace]
members = [
    "core",
    "autodoc",
    "explorer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["flib"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
argh = "0.1"
byteorder = "1"
castaway = "0.2"
chrono = "0.4"
enum-try-from = "0.0.1"
fnv_rs = { git = "https://github.com/flibdev/fnv-rs.git" }
hashbrown = "0.15"
modular-bitfield = "0.11"
mut-rc = "0.1"
once_cell = "1.21"
paste = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
vmap = "0.6"
